# emma-claude

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  predict.yaml
config/mode/: evaluate.yaml  predict.yaml
scripts/: setup.sh
src/: main.py
src/data/: nuimages_loader.py
src/model/: emma.py
src/model/prompts/: analysis.txt  system.txt
src/scripts/: cli.py
src/utils/: geometry.py  logger.py
src/visualization/: visualizer.py
